// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentMethodSelector renders correctly 1`] = `
[
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#131416",
        "fontFamily": "Geist-Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginVertical": 8,
      }
    }
    testID="label"
  >
    Update payment method
  </Text>,
  <TouchableOpacity
    accessible={false}
    disabled={true}
  >
    <View
      style={
        [
          {
            "backgroundColor": "#b4b4b528",
            "borderRadius": 8,
            "padding": 16,
          },
          undefined,
          undefined,
          {
            "padding": 0,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityRole="none"
        accessible={true}
        style={
          {
            "padding": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              {
                "flex": -1,
              }
            }
            testID="listitemcolumn"
          >
            <Image
              source={
                {
                  "uri": "https://example.com/icon.png",
                }
              }
            />
          </View>
          <View
            accessible={false}
            style={
              {
                "width": 16,
              }
            }
            testID="listitem-gap"
          />
          <View
            style={
              {
                "flex": 1,
              }
            }
            testID="listitemcolumn"
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#131416",
                  "fontFamily": "Geist-Medium",
                  "fontSize": 18,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Debit or Credit
            </Text>
          </View>
          <View
            accessible={false}
            style={
              {
                "width": 16,
              }
            }
            testID="listitem-gap"
          />
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#131416",
                  "fontFamily": "Geist-Bold",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Change
            </Text>
            <SvgMock
              color="#66676a"
              fill="currentColor"
              height={16}
              name="ArrowDown"
              style={
                {
                  "height": 16,
                  "marginLeft": 8,
                  "width": 16,
                }
              }
              width={16}
            />
          </View>
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#b4b4b566",
            "height": 1,
            "marginLeft": 16,
            "marginRight": 16,
          }
        }
      />
      <View
        style={
          {
            "flexDirection": "row",
            "margin": 16,
          }
        }
      >
        <View
          source={
            {
              "uri": "https://on-ramp-content-uat.api.cx.metamask.io/assets/Visa-regular@3x.png",
            }
          }
          style={
            {
              "height": 20,
              "marginRight": 6,
              "width": 30,
            }
          }
        />
        <View
          source={
            {
              "uri": "https://on-ramp-content-uat.api.cx.metamask.io/assets/Mastercard-regular@3x.png",
            }
          }
          style={
            {
              "height": 20,
              "marginRight": 6,
              "width": 30,
            }
          }
        />
      </View>
    </View>
  </TouchableOpacity>,
]
`;

exports[`PaymentMethodSelector renders correctly if there are no icons 1`] = `
[
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#131416",
        "fontFamily": "Geist-Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginVertical": 8,
      }
    }
    testID="label"
  >
    Update payment method
  </Text>,
  <TouchableOpacity
    accessible={false}
    disabled={true}
  >
    <View
      style={
        [
          {
            "backgroundColor": "#b4b4b528",
            "borderRadius": 8,
            "padding": 16,
          },
          undefined,
          undefined,
          {
            "padding": 0,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityRole="none"
        accessible={true}
        style={
          {
            "padding": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              {
                "flex": -1,
              }
            }
            testID="listitemcolumn"
          >
            <Image
              source={
                {
                  "uri": "https://example.com/icon.png",
                }
              }
            />
          </View>
          <View
            accessible={false}
            style={
              {
                "width": 16,
              }
            }
            testID="listitem-gap"
          />
          <View
            style={
              {
                "flex": 1,
              }
            }
            testID="listitemcolumn"
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#131416",
                  "fontFamily": "Geist-Medium",
                  "fontSize": 18,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Debit or Credit
            </Text>
          </View>
          <View
            accessible={false}
            style={
              {
                "width": 16,
              }
            }
            testID="listitem-gap"
          />
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#131416",
                  "fontFamily": "Geist-Bold",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Change
            </Text>
            <SvgMock
              color="#66676a"
              fill="currentColor"
              height={16}
              name="ArrowDown"
              style={
                {
                  "height": 16,
                  "marginLeft": 8,
                  "width": 16,
                }
              }
              width={16}
            />
          </View>
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#b4b4b566",
            "height": 1,
            "marginLeft": 16,
            "marginRight": 16,
          }
        }
      />
      <View
        style={
          {
            "flexDirection": "row",
            "margin": 16,
          }
        }
      />
    </View>
  </TouchableOpacity>,
]
`;

exports[`PaymentMethodSelector renders loading state correctly 1`] = `
[
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#131416",
        "fontFamily": "Geist-Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginVertical": 8,
      }
    }
    testID="label"
  >
    Update payment method
  </Text>,
  <TouchableOpacity
    accessible={false}
    disabled={true}
  >
    <View
      style={
        [
          {
            "backgroundColor": "#b4b4b528",
            "borderRadius": 8,
            "padding": 16,
          },
          undefined,
          undefined,
          {
            "padding": 0,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityRole="none"
        accessible={true}
        style={
          {
            "padding": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              {
                "flex": -1,
              }
            }
            testID="listitemcolumn"
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "#b4b4b528",
                    "borderRadius": 30,
                    "padding": 14,
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  {
                    "width": "30%",
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            />
          </View>
          <View
            accessible={false}
            style={
              {
                "width": 16,
              }
            }
            testID="listitem-gap"
          />
          <View
            style={
              {
                "flex": 1,
              }
            }
            testID="listitemcolumn"
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "#b4b4b528",
                    "borderRadius": 30,
                    "padding": 14,
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#b4b4b566",
            "height": 1,
            "marginLeft": 16,
            "marginRight": 16,
          }
        }
      />
      <View
        style={
          {
            "flexDirection": "row",
            "margin": 16,
          }
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#b4b4b528",
                "borderRadius": 30,
                "padding": 14,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "width": "30%",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
            ]
          }
        />
      </View>
    </View>
  </TouchableOpacity>,
]
`;
